src/k8s/templates/env-setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: $MONOREPO_NAMESPACE
