src/k8s/templates/deployment-debug.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: $MONOREPO_DEBUG_NAME
    env: $MONOREPO_ENV
  name: $MONOREPO_DEBUG_NAME
  namespace: $MONOREPO_NAMESPACE
spec:
  replicas: $MONOREPO_PKG_REPLICAS
  selector:
    matchLabels:
      app: $MONOREPO_DEBUG_NAME
  template:
    metadata:
      labels:
        app: $MONOREPO_DEBUG_NAME
        env: $MONOREPO_ENV
    spec:
      volumes:
        - name: secret-injection-hook
          secret:
            secretName: $MONOREPO_SECRET_NAME
      containers:
        - image: $MONOREPO_IMAGE_PATH
          name: $MONOREPO_DEBUG_NAME
          volumeMounts:
            - name: secret-injection-hook
              mountPath: /etc/kubernetes/secrets
              readOnly: true
          resources:
            requests:
              memory: '250Mi'
