src/k8s/templates/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: $MONOREPO_SERVICE_NAME
    env: $MONOREPO_ENV
  name: $MONOREPO_SERVICE_NAME
  namespace: $MONOREPO_NAMESPACE
spec:
  replicas: $MONOREPO_PKG_REPLICAS
  selector:
    matchLabels:
      app: $MONOREPO_SERVICE_NAME
  template:
    metadata:
      labels:
        app: $MONOREPO_SERVICE_NAME
        env: $MONOREPO_ENV
    spec:
      volumes:
        - name: secret-injection-hook
          secret:
            secretName: $MONOREPO_SECRET_NAME
      containers:
        - image: $MONOREPO_IMAGE_PATH
          name: $MONOREPO_SERVICE_NAME
          args:
            - "${MONOREPO_PROJECT_NAME}"
          volumeMounts:
            - name: secret-injection-hook
              mountPath: /etc/kubernetes/secrets
              readOnly: true
          startupProbe:
            httpGet:
              path: /healthz
              port: $MONOREPO_PKG_PORT
            failureThreshold: 50
            periodSeconds: 2
          resources:
            requests:
              memory: '250Mi'
